# Gr3njaDiscordBot

./: .env.example  README.md  pyproject.toml
src/advancement/: __init__.py  cog.py  service.py
src/ai/: __init__.py  client.py  cog.py  service.py
src/buy/: __init__.py  cog.py
src/casino/: __init__.py  cards.py  cog.py
src/database/: connection.py
src/event/: __init__.py  cog.py
src/gr3nja_discord_bot/: __init__.py  bot.py  config.py
src/money/: __init__.py  cog.py  service.py
src/music/: __init__.py  cog.py  service.py
src/reaction/: __init__.py  cog.py
src/role/: __init__.py  cog.py
src/rule/: __init__.py  cog.py
src/shiritori/: __init__.py  cog.py  text.py
src/summary/: __init__.py  cog.py  service.py
src/utils/: __init__.py  time.py
src/vc/: __init__.py  cog.py  service.py
src/warning/: __init__.py  cog.py
